# GC_sentiment_analysis

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
gcsa/: __init__.py  dataset.py  features.py  plots.py
gcsa/modeling/: predict.py  train.py
notebooks/: EDA_visualization.ipynb  data_clean.ipynb  dataset.ipynb  sentiment_analysis.ipynb  sentiment_data_analysis.ipynb
