[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gcsa"
version = "0.0.1"
description = "Sentiment Analysis for Great Clips Reviews Online"
authors = [
  { name = "Austine Do" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["gcsa"]
include = ["pyproject.toml", "gcsa/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gcsa"]
force-sort-within-sections = true

